basic CRUD with realtime databse firebase

--- a/firebase_proj/src/.env
+++ b/firebase_proj/src/.env
@@ -1,8 +1,8 @@
-API_KEY = AIzaSyDg777L7xH-WBimCj4ofl5XUIzIMZEjZ9o
-authDomain = socialape-29b33.firebaseapp.com,
-databaseURL = https://socialape-29b33.firebaseio.com,
-projectId = socialape-29b33,
-storageBucket = socialape-29b33.appspot.com,
-messagingSenderId = 948640288697,
-appId = 1:948640288697:web:8ab31feadab022064cb068,
-measurementId = G-227BEPW8E9
+REACT_APP_API_KEY = AIzaSyDg777L7xH-WBimCj4ofl5XUIzIMZEjZ9o
+REACT_APP_AUTH_DOMAIN = socialape-29b33.firebaseapp.com,
+REACT_APP_DATABASE_URL = https://socialape-29b33.firebaseio.com,
+REACT_APP_PROJECT_ID = socialape-29b33,
+REACT_APP_STORAGE_BUCKET = socialape-29b33.appspot.com,
+REACT_APP_MESSAGING_SENDER = 948640288697,
+REACT_APP_APP_ID = 1:948640288697:web:8ab31feadab022064cb068,
+REACT_APP_MEASUREMENT_ID = G-227BEPW8E9
