--- a/firebase_proj/.gitignore
+++ b/firebase_proj/.gitignore
@@ -5,7 +5,7 @@
 /.pnp
 .pnp.js
 package-lock.json
-
+.gitignore
 # testing
 /coverage
 
@@ -14,6 +14,7 @@ package-lock.json
 
 # misc
 .DS_Store
+.env
 .env.local
 .env.development.local
 .env.test.local
